hphp/test/zend/bad/ext-spl/bug62262.php
<?php

var_dump(new RecursiveArrayIterator(array()) instanceof Countable);

?>